--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -7,7 +7,8 @@
 }
 
 .card {
-  width: 280px;
+  width: 100%;
+  max-width: 280px;
   padding: 40px;
   border-radius: 20px;
   background: $card-bg;
