--- a/scss/_pricing.scss
+++ b/scss/_pricing.scss
@@ -22,7 +22,7 @@
 
   .pricing-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, 300px), 1fr));
     gap: 30px;
     max-width: 1300px;
     margin: 0 auto;
